examples/test/testpolicy14448.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14448
  namespace: namespace358
spec:
  podSelector:
    matchLabels:
      key37: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value37
          key0: value17
          key20: value32
      podSelector:
        matchLabels:
          key17: value24
